// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test custom class 1`] = `
<h2
  className="Changelog Title test-custom"
>
  Short and Sweet
</h2>
`;

exports[`Test empty state 1`] = `
<h2
  className="Changelog Title "
>
  
</h2>
`;

exports[`Test long title 1`] = `
<h2
  className="Changelog Title "
>
  This is an absurdly long title and you would never really want this but I guess we'll show it here anyways just for you
</h2>
`;

exports[`Test short title 1`] = `
<h2
  className="Changelog Title "
>
  Short and Sweet
</h2>
`;
